--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,22 +1,22 @@
-$portal-users-main-bg-color: #3AB54A !default;
-$portal-moderators-main-bg-color: #25AAE2 !default;
-$portal-administrators-main-bg-color: #F1592A !default;
-$portal-designers-main-bg-color: #92278F !default;
-$portal-sysadmins-main-bg-color: #283890 !default;
-$portal-developers-main-bg-color: #231F20 !default;
+$portal-users-main-bg-color: #1BB058 !default;
+$portal-moderators-main-bg-color: #F9A41A !default;
+$portal-administrators-main-bg-color: #D13138 !default;
+$portal-designers-main-bg-color: #29ABE2 !default;
+$portal-sysadmins-main-bg-color: #9E34EC !default;
+$portal-developers-main-bg-color: #1B1F20 !default;
 
-$portal-users-musthead-color: #70D67C !default;
-$portal-moderators-musthead-color: #75CFF5 !default;
-$portal-administrators-musthead-color: #EFAB96 !default;
-$portal-designers-musthead-color: #E484E1 !default;
-$portal-sysadmins-musthead-color: #6178F5 !default;
-$portal-developers-musthead-color: #ADADAD !default;
+$portal-users-musthead-color: scale-color($portal-users-main-bg-color, $lightness: 80%) !default;
+$portal-moderators-musthead-color: scale-color($portal-moderators-main-bg-color, $lightness: 80%) !default;
+$portal-administrators-musthead-color: scale-color($portal-administrators-main-bg-color, $lightness: 80%) !default;
+$portal-designers-musthead-color: scale-color($portal-designers-main-bg-color, $lightness: 80%) !default;
+$portal-sysadmins-musthead-color: scale-color($portal-sysadmins-main-bg-color, $lightness: 80%) !default;
+$portal-developers-musthead-color: scale-color($portal-developers-main-bg-color, $lightness: 80%) !default;
 
 $portal-users-anchor-color: #32903E !default;
-$portal-moderators-anchor-color: #40778E !default;
+$portal-moderators-anchor-color: #E89000 !default;
 $portal-administrators-anchor-color: #D65A33 !default;
-$portal-designers-anchor-color: #9C3399 !default;
-$portal-sysadmins-anchor-color: #31408E !default;
+$portal-designers-anchor-color: #0181B0 !default;
+$portal-sysadmins-anchor-color: #7100C0 !default;
 $portal-developers-anchor-color: #695D5D !default;
 
 $sidebar-width: 400px;
