replace dash when generate sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -305,7 +305,7 @@
 </li>
 <a class='developers' href='/developers' id='sidebar-section-developers'>Developers</a>
 <li class='nav-item'>
-<a class='forum-import' href='/developers#forum-import' id='sidebar-subsection-forum-import'>Forum-import</a>
+<a class='forum-import' href='/developers#forum-import' id='sidebar-subsection-forum-import'>Forum import</a>
 {% if section == 'developers' and subsection == 'forum-import' %}
 <ul class='subsection hide'>
 <li class='nav-item'>
@@ -337,6 +337,9 @@
 </li>
 </ul>
 {% endif %}
+</li>
+<li class='nav-item'>
+<a class='creating-plugins' href='/developers#creating-plugins' id='sidebar-subsection-creating-plugins'>Creating plugins</a>
 </li>
 <li class='nav-item'>
 <a class='hacking' href='/developers#hacking' id='sidebar-subsection-hacking'>Hacking</a>
