--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -2,7 +2,7 @@
   font-family: "PT Sans", Helvetica, Arial, sans-serif;
   float: left;
   margin-right: 20px;
-  width: 256px;
+  width: 180px;
   padding: 16px 12px 16px 16px;
   background-color: #f7f7f7;
 }
@@ -25,53 +25,17 @@
   text-decoration: none;
   color: #337ab7;
 
-  &:visited {
-  }
-
   &:hover {
     text-decoration: underline;
   }
 }
 
-.sidebar-item {
-  padding: 1rem;
-}
-.sidebar-item p:last-child {
-  margin-bottom: 0;
+.nav-item {
+  padding-left: 1rem;
 }
 
-/* Sidebar nav */
-.sidebar-nav {
-  border-bottom: 1px solid rgba(255,255,255,.1);
-}
-.sidebar-nav-item {
-  display: block;
-  padding: .5rem 1rem;
-  border-top: 1px solid rgba(255,255,255,.1);
-}
-.sidebar-nav-item.active,
-a.sidebar-nav-item:hover,
-a.sidebar-nav-item:focus {
-  text-decoration: none;
-  background-color: rgba(255,255,255,.1);
-  border-color: transparent;
-}
-
-@media (min-width: 48em) {
-  .sidebar-item {
-    padding: 1.5rem;
+@media (max-width: 760px) {
+  .sidebar {
+    display: none;
   }
-  .sidebar-nav-item {
-    padding-left:  1.5rem;
-    padding-right: 1.5rem;
-  }
-}
-
-/* Hide the sidebar checkbox that we toggle with `.sidebar-toggle` */
-.sidebar-checkbox {
-  position: absolute;
-  opacity: 0;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
 }
