escape doc title

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,6 +8,9 @@
 <a class='essentials' href='/administrators#essentials' id='sidebar-subsection-essentials'>Essentials</a>
 </li>
 <li class='nav-item'>
+<a class='email' href='/administrators#email' id='sidebar-subsection-email'>Email</a>
+</li>
+<li class='nav-item'>
 <a class='logins' href='/administrators#logins' id='sidebar-subsection-logins'>Logins</a>
 </li>
 <a class='designers' href='/designers' id='sidebar-section-designers'>Designers</a>
@@ -19,16 +22,16 @@
 <a class='install' href='/sysadmins#install' id='sidebar-subsection-install'>Install</a>
 </li>
 <li class='nav-item'>
+<a class='essentials' href='/sysadmins#essentials' id='sidebar-subsection-essentials'>Essentials</a>
+</li>
+<li class='nav-item'>
 <a class='email' href='/sysadmins#email' id='sidebar-subsection-email'>Email</a>
 </li>
 <li class='nav-item'>
 <a class='docker' href='/sysadmins#docker' id='sidebar-subsection-docker'>Docker</a>
 </li>
 <li class='nav-item'>
-<a class='essentials' href='/sysadmins#essentials' id='sidebar-subsection-essentials'>Essentials</a>
-</li>
-<li class='nav-item'>
-<a class='general' href='/sysadmins#general' id='sidebar-subsection-general'>General</a>
+<a class='miscellaneous' href='/sysadmins#miscellaneous' id='sidebar-subsection-miscellaneous'>Miscellaneous</a>
 </li>
 <a class='developers' href='/developers' id='sidebar-section-developers'>Developers</a>
 <li class='nav-item'>
