--- a/_sass/card.scss
+++ b/_sass/card.scss
@@ -80,7 +80,6 @@
 
 .portal.list {
   max-width: 1100px;
-  margin: 0 auto;
   padding: 0;
   list-style: none;
   overflow: auto;
@@ -92,10 +91,11 @@
 }
 
 .portal.card {
-  float: left;
+  display: inline-block;
   height: 620px;
-  width: 32%;
-  margin: 0 10px 10px 0;
+  min-width: 350px;
+  width: 30%;
+  margin: 10px 10px 10px 0;
   overflow: hidden;
   background: #FFF;
   border: 1px solid #c1c1c1;
