source is only bold now #18

--- a/_sass/documentation.scss
+++ b/_sass/documentation.scss
@@ -56,3 +56,7 @@
 .documentation-source {
   font-weight: bolder;
 }
+.documentation-source a {
+  color: #000 !important;
+  text-decoration: none !important;
+}
