--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -24,4 +24,17 @@ layout: base
     <div class="documentation-content">{{ content }}</div>
   </article>
 </div>
+<div id='discourse-comments'></div>
+
+<script type="text/javascript">
+ record_from_txt = document.getElementsByClassName('documentation-source')[0].getElementsByTagName("a")[0].href
+  DiscourseEmbed = { discourseUrl: 'http://meta.discourse.org/',
+                     topicId: parseInt(txt.substring(txt.lastIndexOf("/")+1)) };
+
+  (function() {
+    var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
+    d.src = DiscourseEmbed.discourseUrl + 'javascripts/embed.js';
+    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(d);
+  })();
+</script>
 {% include footer.html %}
