New docs, updated sidebar, updated index
More updates pending for the index. Several broken pages there.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -35,6 +35,9 @@
 </li>
 <a class='developers' href='/developers' id='sidebar-section-developers'>Developers</a>
 <li class='nav-item'>
+<a class='environment' href='/developers#environment' id='sidebar-subsection-environment'>Environment</a>
+</li>
+<li class='nav-item'>
 <a class='forum-import' href='/developers#forum-import' id='sidebar-subsection-forum-import'>Forum import</a>
 </li>
 <li class='nav-item'>
