--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -27,14 +27,17 @@ layout: base
 <div id='discourse-comments'></div>
 
 <script type="text/javascript">
- record_from_txt = document.getElementsByClassName('documentation-source')[0].getElementsByTagName("a")[0].href
-  DiscourseEmbed = { discourseUrl: 'http://meta.discourse.org/',
-                     topicId: parseInt(txt.substring(txt.lastIndexOf("/")+1)) };
+ txt = document.getElementsByClassName('documentation-source')[0].getElementsByTagName("a")[0].href
+ topicId = (txt.lastIndexOf('meta.discourse.org') > -1) ?  parseInt(txt.substring(txt.lastIndexOf("/")+1)) : -1
+  DiscourseEmbed = { discourseUrl: 'https://meta.discourse.org/',
+                     topicId: topicId };
 
   (function() {
+    if(DiscourseEmbed.topicId > 0){
     var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
     d.src = DiscourseEmbed.discourseUrl + 'javascripts/embed.js';
     (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(d);
+    }
   })();
 </script>
 {% include footer.html %}
