--- a/_sass/portal.scss
+++ b/_sass/portal.scss
@@ -47,10 +47,10 @@
 }
 .portal-header h1 {
   color: #fff;
-  font-size: 50px;
+  font-size: 26pt;
 }
 .portal-header .description {
-  font-size: 24px;
+  font-size: 18pt;
   font-weight: 300;
 }
 .subsection h2 {
