--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -21,6 +21,7 @@ layout: base
     {% include sidebar.html %}
   </nav>
   <article class="documentation-page {{ section }}">
+    <div id="toc"></div>
     <div class="documentation-content">{{ content }}</div>
   </article>
 </div>
